# Flight-Project

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  Procfile  README.md  requirements.txt
backend/: .dockerignore  Dockerfile  alembic.ini  debug_alembic.py  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_notifications.py  0003_banners.py  0004_offers.py  0005_add_stops.py  0006_banner_url_text.py  0007_offer_extensions.py  0008_ticket_reminders.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: admin.py  auth.py  company.py  content.py  flights.py  notifications.py  tickets.py
backend/app/core/: config.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/models/: banner.py  company.py  company_manager.py  flight.py  notification.py  offer.py  ticket.py  ticket_reminder.py  user.py
backend/app/schemas/: auth.py
backend/app/services/: notification_ws.py  reminder_scheduler.py
backend/tests/: test_health.py  test_tickets_multi.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  env.d.ts  global.css  main.tsx
frontend/src/components/: BannerSlider.tsx  CountryInput.tsx  HighlightedOffers.tsx  NotificationsBell.tsx  OffersGrid.tsx  QuickSearchForm.tsx
frontend/src/lib/: api.ts  auth.ts  authClaims.ts  countryCodes.ts
frontend/src/pages/: AdminPanel.tsx  CompanyDashboard.tsx  Dashboard.tsx  Landing.tsx  MyTickets.tsx  (+1 more)
infra/: docker-compose.yml
(+4 files in other folders)
