[tool.poetry]
name = "flightproject-backend"
version = "0.1.0"
description = "Flight Ticketing Web Service - FastAPI backend"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.32"
pydantic = {version = "^2.8.2", extras = ["email"]}
pydantic-settings = "^2.4.0"
psycopg = {extras = ["binary"], version = ">=3.2.10"}
pyjwt = "^2.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
argon2-cffi = "^23.1.0"
python-multipart = "^0.0.9"
alembic = "^1.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
